--- a/public/style/index.css
+++ b/public/style/index.css
@@ -322,6 +322,7 @@ body #main .music-stage {
 body #main .music-stage .shrink-stage {
   position: fixed;
   cursor: pointer;
+  z-index: 10;
   top: 80px;
   right: 30px;
   width: 50px;
@@ -409,7 +410,7 @@ body #main .music-preview {
   position: relative;
 }
 body #main .music-preview .music-preview-pic {
-  width: 100px;
+  width: 150px;
   height: 40px;
   font-size: 12px;
 }
@@ -419,8 +420,9 @@ body #main .music-preview .music-preview-pic img {
 }
 body #main .music-preview .music-preview-pic span {
   float: left;
+  overflow: hidden;
   margin-left: 5px;
-  width: 40px;
+  width: 90px;
   height: 20px;
   line-height: 20px;
 }
@@ -633,6 +635,66 @@ body #footer {
 }
 body #footer span {
   cursor: pointer;
+}
+body #footer .music-dialog {
+  position: fixed;
+  bottom: 50px;
+  right: 0;
+  z-index: 20;
+  width: 500px;
+  height: 300px;
+  background: #fafafa;
+  box-shadow: -2px -2px 7px #ccc;
+  display: none;
+}
+body #footer .music-dialog div:first-child {
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 14px;
+  background: #F2F2F4;
+}
+body #footer .music-dialog div:nth-child(2) {
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  padding-left: 30px;
+  border-bottom: 1px solid #ddd;
+}
+body #footer .music-dialog ul {
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 230px;
+  width: 500px;
+}
+body #footer .music-dialog ul li {
+  box-sizing: border-box;
+  font-size: 12px;
+  border-bottom: 1px solid #ddd;
+}
+body #footer .music-dialog ul li a {
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  width: 500px;
+  padding-left: 30px;
+}
+body #footer .music-dialog ul li a span:last-child {
+  float: right;
+  width: 150px;
+  text-align: left;
+}
+body #footer .music-dialog ul li a:hover {
+  cursor: auto;
+}
+body #footer .music-dialog ul li.odd {
+  background: #F5F5F7;
+}
+body #footer .music-dialog ul li:hover {
+  background: #EBECED;
+}
+body #footer .music-dialog.active {
+  display: block;
 }
 body #footer .progress-container {
   display: inline-block;
