--- a/public/style/index.css
+++ b/public/style/index.css
@@ -338,7 +338,7 @@ body #main .music-stage .shrink-stage i.fa {
 }
 body #main .music-stage .stage-container {
   margin: 0 80px;
-  height: 2000px;
+  height: 1200px;
 }
 body #main .music-stage .stage-container .canvas-area {
   width: 900px;
@@ -467,17 +467,135 @@ body #main .display-area {
   overflow-x: hidden;
   overflow-y: auto;
   padding: 0 20px 0 20px;
+  /****主显示区块公共样式******/
+  /****主显示区块独立样式****/
 }
-body #main .display-area .nav-bar {
+body #main .display-area .main-divider-block {
+  display: none;
+}
+body #main .display-area .main-divider-block.active {
+  display: block;
+}
+body #main .display-area .song-lists-area {
+  background: #fafafa;
+  padding-top: 20px;
+  box-sizing: border-box;
+}
+body #main .display-area .song-lists-area .lists-area-top:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-cover {
+  width: 200px;
+  height: 200px;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-cover img {
+  width: 100%;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg {
+  margin-left: 20px;
+  height: 120px;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg div:nth-child(2),
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg div:nth-child(3) {
+  height: 40px;
+  line-height: 40px;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-first {
+  height: 30px;
+  vertical-align: top;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-first span {
+  display: inline-block;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-first .lists-type {
+  padding: 5px 10px;
+  color: #fff;
+  border-radius: 3px;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-first .lists-name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-second span {
+  display: inline-block;
+  vertical-align: middle;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-second .lists-msg-head {
+  box-sizing: border-box;
+  height: 40px;
+  line-height: 40px;
+  padding-top: 5px;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-second .lists-msg-head img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-second .lists-msg-nickname {
+  margin-left: 10px;
+  font-size: 14px;
+}
+body #main .display-area .song-lists-area .lists-area-body {
+  margin-top: 100px;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-head li {
+  display: inline-block;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-head li a {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  display: block;
+  width: 80px;
+  text-align: center;
+  height: 34px;
+  line-height: 34px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-bottom: none;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-head li.active a {
+  border: none;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs {
+  width: 100%;
+  text-align: left;
+  border-collapse: collapse;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs thead tr {
+  height: 30px;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs thead tr th {
+  padding-left: 10px;
+  border: 1px solid #ddd;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs tbody tr {
+  height: 30px;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs tbody tr td {
+  padding-left: 10px;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs tbody tr td i.fa:hover {
+  cursor: pointer;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs tbody tr.even {
+  background: #F5F5F7;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-songs tbody tr:hover {
+  background: #EBECED;
+}
+body #main .display-area #findMusic .nav-bar {
   padding: 0 10%;
 }
-body #main .display-area .nav-bar li {
+body #main .display-area #findMusic .nav-bar li {
   display: inline-block;
   padding: 10px;
   width: 16%;
   box-sizing: border-box;
 }
-body #main .display-area .nav-bar li a {
+body #main .display-area #findMusic .nav-bar li a {
   text-align: center;
   display: block;
   font-size: 16px;
@@ -641,8 +759,8 @@ body #footer .music-dialog {
   bottom: 50px;
   right: 0;
   z-index: 20;
-  width: 500px;
-  height: 300px;
+  width: 450px;
+  height: 270px;
   background: #fafafa;
   box-shadow: -2px -2px 7px #ccc;
   display: none;
@@ -664,8 +782,8 @@ body #footer .music-dialog div:nth-child(2) {
 body #footer .music-dialog ul {
   overflow-x: hidden;
   overflow-y: auto;
-  height: 230px;
-  width: 500px;
+  height: 200px;
+  width: 450px;
 }
 body #footer .music-dialog ul li {
   box-sizing: border-box;
@@ -676,8 +794,10 @@ body #footer .music-dialog ul li a {
   display: block;
   height: 30px;
   line-height: 30px;
-  width: 500px;
+  width: 450px;
   padding-left: 30px;
+  color: #555;
+  cursor: default;
 }
 body #footer .music-dialog ul li a span:last-child {
   float: right;
@@ -685,7 +805,7 @@ body #footer .music-dialog ul li a span:last-child {
   text-align: left;
 }
 body #footer .music-dialog ul li a:hover {
-  cursor: auto;
+  cursor: default;
 }
 body #footer .music-dialog ul li.odd {
   background: #F5F5F7;
