--- a/public/style/theme-red.less
+++ b/public/style/theme-red.less
@@ -93,6 +93,13 @@ body{
                 background:@themeColor;
               }
             }
+            .lists-msg-third{
+              .list-play-all{
+                i.fa{
+                  color:@themeColor;
+                }
+              }
+            }
           }
         }
         .lists-area-body{
