--- a/public/style/theme-golden.css
+++ b/public/style/theme-golden.css
@@ -68,6 +68,19 @@ body #main .music-tool-bar .music-tool-list li.active {
 body #main .display-area {
   background: #FAFAFA;
 }
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-first .lists-type {
+  background: #F9D594;
+}
+body #main .display-area .song-lists-area .lists-area-top .lists-area-top-msg .lists-msg-third .list-play-all i.fa {
+  color: #F9D594;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-head {
+  border-bottom: 1px solid #F9D594;
+}
+body #main .display-area .song-lists-area .lists-area-body .lists-area-body-head li.active a {
+  color: #fff;
+  background: #F9D594;
+}
 body #main .display-area .nav-bar {
   border-bottom: 1px solid #ebebef;
 }
