add current song stauts icon

--- a/public/style/theme-black.less
+++ b/public/style/theme-black.less
@@ -154,6 +154,12 @@ body{
     border-top:1px solid @musicToolActive;
     border-bottom:1px solid @musicToolActive;
     background:@musicToolBackgroundColor;
+    //歌单弹出框
+    .music-dialog{
+      i.fa{
+        color:@themeColor;
+      }
+    }
     //进度条样式
     .progress-container{
       background:@musicToolActive;
