--- a/public/style/theme-red.css
+++ b/public/style/theme-red.css
@@ -100,6 +100,9 @@ body #footer {
   border-bottom: 1px solid #ebebef;
   background: #F5F5F7;
 }
+body #footer .music-dialog i.fa {
+  color: #C62F2F;
+}
 body #footer .progress-container {
   background: #ebebef;
 }
